# Full-AI-automated-trading-system-powered-fully-on-blockchain

./: .coveragerc  .dockerignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  config.json  docker-compose.yml  environment.yml  freqtrade.service  freqtrade.service.watchdog  mkdocs.yml  setup.cfg  setup.sh
.devcontainer/: devcontainer.json
.env/lib/: libblosc.1.21.1.dylib
aitrade/: __main__.py  freqtradebot.py  loggers.py  main.py  misc.py  wallets.py  worker.py
aitrade/commands/: __init__.py  arguments.py  build_config_commands.py  cli_options.py  data_commands.py  deploy_commands.py  hyperopt_commands.py  list_commands.py  optimize_commands.py  pairlist_commands.py  plot_commands.py  trade_commands.py  webserver_commands.py
aitrade/configuration/: __init__.py  check_exchange.py  config_setup.py  config_validation.py  configuration.py  deprecated_settings.py  directory_operations.py  environment_vars.py  load_config.py  timerange.py
aitrade/data/: btanalysis.py  converter.py  dataprovider.py
aitrade/edge/: edge_positioning.py
aitrade/enums/: __init__.py
aitrade/exchange/: bibox.py  (+14 more)
build_helpers/: install_windows.ps1
freqtrade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  conftest_trades.py  conftest_trades_usdt.py  test_arguments.py  test_configuration.py  test_directory_operations.py  test_freqtradebot.py  test_indicators.py  test_integration.py  test_main.py  test_misc.py  test_periodiccache.py  test_persistence.py  test_plotting.py  test_timerange.py  test_wallets.py  test_worker.py
(+115 files in other folders)
